argo/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
      version: v1
  template:
    metadata:
      labels:
        app: open-webui
        version: v1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: disk
                operator: In
                values:
                - big
      serviceAccountName: open-webui
      containers:
      - image: ghcr.io/open-webui/open-webui:main
        imagePullPolicy: IfNotPresent
        name: open-webui
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: open-webui
      volumes:
      - name: open-webui
        persistentVolumeClaim:
          claimName: open-webui-pvc
