argo/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    app: open-webui
    service: open-webui
spec:
  ports:
  - name: open-webui
    port: 3000
    targetPort: 3000
  selector:
    app: open-webui
